--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.3",
+    "@angular/cli": "^1.5.5",
     "@angular/compiler-cli": "5.0.1",
     "@types/jasmine": "2.6.3",
     "@types/node": "8.0.50",
@@ -54,7 +54,7 @@
     "protractor": "5.2.0",
     "ts-node": "3.3.0",
     "tslint": "5.8.0",
-    "typescript": "2.6.1"
+    "typescript": "^2.4.2"
   },
   "engines": {
     "node": ">= 6.9.0",
